<resources>
    <string name="app_name">driverCarpool</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_link">Already have an account? Login</string>
    <string name="selected_car_details_field">Selected Car Details</string>
    <string name="selected_car_details_text"></string>
    <string name="order_summary_field">Order Summary</string>
    <string name="order_summary_text"></string>
    <string name="total_amount">Total Amount</string>
    <string name="total_amount_text"></string>
    <string name="pay_btn">Pay Now</string>
    <string name="delete_btn">Delete Order</string>
    <string name="cart_title">Cart</string>
    <string name="profile_data">Profile Data</string>
    <string name="book_trip">Book your Trip Now</string>
    <string name="payment_info">Payment</string>
    <string name="order_history">Order History</string>
    <string name="trip_btn">Edit</string>
    <string name="payment_header">Payment History</string>
    <string name="btn_add_payment">Add Payment</string>
    <string name="signOut">Sign Out</string>
    <string name="add">Add Trip</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="time">Select Time</string>
    <string name="car_plate">Car Plate Number</string>
    <string name="your_trips">Your Upcoming Trips</string>
    <string name="check_requests">"Check Requests"</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="order_state">Order State:</string>
    <string name="car_plate_number">Car Plate Number:</string>
    <string name="client_name">Client Name:</string>
    <string name="order_time">Order Time:</string>
    <string name="order_price">Order Price:</string>
    <string name="destination_label">Destination:</string>
    <string name="source_label">Source:</string>
    <string name="order_date">Order Date:</string>
    <string name="order_id">Order ID:</string>
    <string name="carpool_driver_app">Carpool Driver App</string>
    <string name="requests">Requests</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="trip_history">Trips History</string>
    <string name="request_history">Requests History</string>
    <string name="passengers_number">Passengers Number</string>
    <string name="track_your_trips">Track your Trips</string>
    <string name="start">Start</string>
    <string name="complete">Complete</string>
    <string name="confirm">Confirm</string>
</resources>