<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cart_info"
        android:icon="@drawable/shopping_cart_icon"
        android:title="@string/cart_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profile_data"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile_data"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/more"
        android:icon="@drawable/baseline_menu_24"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/payment_info"
                android:icon="@drawable/money_sign_icon"
                android:title="@string/payment_info"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/order_history_info"
                android:icon="@drawable/history_order_track_icon"
                android:title="@string/order_history"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/signout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/signOut"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>