<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background2"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/cart_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/cart_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/car_details"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/selected_car_details_field"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/car_details_text_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/selected_car_details_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/order_summary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/order_summary_field"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_details" />

        <TextView
            android:id="@+id/order_summary_text_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/order_summary_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/total_amount"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_amount_text_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/total_amount_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <Button
            android:id="@+id/pay_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/payment_icon"
            android:paddingStart="10dp"
            android:text="@string/pay_btn"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/black"
            android:drawableLeft="@drawable/delete_icon2"
            android:paddingStart="10dp"
            android:text="@string/delete_btn"
            android:textColor="#FFFFFF" />
    </LinearLayout>


</LinearLayout>
