<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/holo_blue_dark"
        android:elevation="4dp"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_below="@id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/requestHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#7393B3"
            android:padding="10dp"
            android:text="@string/request_history"
            android:textColor="#424242"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tripHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#7393B3"
            android:padding="10dp"
            android:text="@string/trip_history"
            android:textColor="#424242"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/trackTrips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#7393B3"
            android:padding="10dp"
            android:text="@string/track_your_trips"
            android:textColor="#424242"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
