<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_background"
    android:padding="16dp"
    tools:context=".LoginActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        android:elevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/car_logo"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:background="@drawable/blue_border" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:background="@drawable/blue_border"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/login_btn"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textColor="#0000FF"
                />

            <TextView
                android:id="@+id/signup_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/no_account_sign_up"
                android:textColor="#0000FF"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
