<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginVertical="5dp">

    <RelativeLayout
        android:id="@+id/relativeParentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewOrderIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/textViewOrderIdLabel"
            android:text="ABC123"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewOrderDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOrderIdLabel"
            android:layout_marginTop="8dp"
            android:text="@string/order_date"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewOrderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOrderId"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/textViewOrderDateLabel"
            android:text="January 1, 2023"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewSourceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOrderDateLabel"
            android:layout_marginTop="8dp"
            android:text="@string/source_label"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOrderDate"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/textViewSourceLabel"
            android:text="Your Source"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewDestinationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewSourceLabel"
            android:layout_marginTop="8dp"
            android:text="@string/destination_label"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewSource"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/textViewDestinationLabel"
            android:text="Your Destination"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewOrderPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDestinationLabel"
            android:layout_marginTop="8dp"
            android:text="@string/order_price"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewOrderPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDestination"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/textViewOrderPriceLabel"
            android:text="$50.00"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewOrderTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOrderPriceLabel"
            android:layout_marginTop="8dp"
            android:text="@string/order_time"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewOrderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOrderPrice"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/textViewOrderTimeLabel"
            android:text="7:30 AM"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewClientNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOrderTimeLabel"
            android:layout_marginTop="8dp"
            android:text="@string/client_name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewClientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOrderTime"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/textViewClientNameLabel"
            android:text="John Doe"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewCarPlateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewClientNameLabel"
            android:layout_marginTop="8dp"
            android:text="@string/car_plate_number"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewCarPlate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewClientName"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/textViewCarPlateLabel"
            android:text="ABC 123"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewStateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewCarPlateLabel"
            android:layout_marginTop="8dp"
            android:text="@string/order_state"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewCarPlate"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/textViewStateLabel"
            android:text="ABC 123"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>



</androidx.cardview.widget.CardView>